# lbp

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: configuration.md  files.md  framing.md  implementation-plan.md  index.md  introduction.md  job-control.md  laser.md  movement.md  preview.html  settings.md  spec-design.md  state.md  tools.md  vendor-extensions.md
lbp/: CMakeLists.txt  README.md  lbp.pri
lbp-simulator/: CMakeLists.txt  configuration.cpp  configuration.h  connection.cpp  connection.h  filesystem.cpp  filesystem.h  firmwaresim.cpp  firmwaresim.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  movement.cpp  movement.h  simstate.h  simutils.h  simview.cpp  simview.h  vec4.cpp  vec4.h
lbp/include/lbp/: beio.h  checksum.h  message.h  parser.h  payload.h  queue.h  ringbuffer.h  spec.h
lbp/src/: beio.cpp  checksum.cpp  payload.cpp
lbp/test/: main.cpp
